third_party/rust/chromium_crates_io/vendor/quick-protobuf-0.8.1/tests/rust_protobuf/v3/test_owned_must_compile_error.stderr
error[E0505]: cannot move out of `proto` because it is borrowed
  --> tests/rust_protobuf/v3/test_owned_must_compile_error.rs:17:10
   |
15 |     let owned_copy = proto.proto().s.to_owned();
   |                      ------------- borrow of `proto` occurs here
16 |
17 |     drop(proto);
   |          ^^^^^ move out of `proto` occurs here
18 |     println!("{:?}", owned_copy);
   |                      ---------- borrow later used here
